--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 1vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +21,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+#graph-render {
+  min-height: 90vh;
 }
 
 @keyframes App-logo-spin {
