--- a/frontend/src/Graph.css
+++ b/frontend/src/Graph.css
@@ -12,13 +12,20 @@
     width: 100%;
 }
 
+h1 {
+    margin: 0.5em auto;
+}
+
 #graph #graph-settings {
     display: flex; /* or inline-flex */
     flex-direction: column;
 }
 
-#graph #graph-settings > * {
+/* #graph #graph-settings > * {
     border: 1px solid darkblue;
     padding: 1em 0;
 }
 
+.btn {
+    margin: 0.2em;
+} */
