--- a/frontend/src/Graph.css
+++ b/frontend/src/Graph.css
@@ -21,11 +21,12 @@ h1 {
     flex-direction: column;
 }
 
-/* #graph #graph-settings > * {
-    border: 1px solid darkblue;
-    padding: 1em 0;
+#graph-settings .card-body > *:not(:first-child) {
+    /* display: flex; */
+    display: inline-block;
+    margin: 0.2em;
 }
 
-.btn {
-    margin: 0.2em;
-} */
+.card {
+    margin: 0.2em 0;
+}
