--- a/frontend/src/Graph.css
+++ b/frontend/src/Graph.css
@@ -8,8 +8,7 @@
 }
 
 #graph #graph-view {
-    max-height: 100vh;
-    overflow: scroll;
+    height: 100vh;
     width: 100%;
 }
 
@@ -20,6 +19,8 @@ h1 {
 #graph #graph-settings {
     display: flex; /* or inline-flex */
     flex-direction: column;
+    max-height: 100vh;
+    overflow: scroll;
 }
 
 #graph-settings .card-body > *:not(:first-child) {
